<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.yousfi.hayatiineApp.ui.fragment.add.AddViewModel" />
    </data>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_gray"
                android:paddingBottom="@dimen/margin_50dp">
                <HorizontalScrollView
                    android:id="@+id/hs_cardview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/rl_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:id="@+id/r_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/r1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                android:id="@+id/card_view"
                                android:layout_width="204dp"
                                android:layout_height="141dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="@dimen/margin_20dp"
                                android:layout_marginRight="@dimen/card_margin_10dp"
                                android:layout_marginBottom="10dp"
                                android:background="@color/color_gray"
                                android:backgroundTint="@color/color_gray"
                                app:cardCornerRadius="10dp"
                                tools:cardElevation="3dp">

                                <LinearLayout
                                    android:id="@+id/layoutImageProduct"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignTop="@+id/card_view"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:id="@+id/productImage"
                                        android:layout_width="wrap_content"
                                        android:layout_height="70dp"
                                        android:layout_gravity="center"
                                        android:adjustViewBounds="true"
                                        android:scaleType="fitXY"
                                        android:src="@drawable/cameraicon2x" />

                                    <TextView
                                        android:id="@+id/tv_img"
                                        android:layout_width="60dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="5dp"
                                        android:fontFamily="@font/roboto_bold"
                                        android:textSize="9dp"
                                        android:text="Télechergez une image"
                                        android:textAlignment="center"
                                        android:textColor="?android:attr/textColorPrimary"
                                        />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>


                        </RelativeLayout>

                        <ImageView
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_below="@+id/r1"
                            android:layout_alignTop="@id/r1"
                            android:layout_alignRight="@+id/r1"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/add" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cv_photo2"
                            android:layout_width="204dp"
                            android:layout_height="141dp"
                            android:layout_alignTop="@id/r1"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="@dimen/card_margin_10dp"
                            android:layout_marginTop="@dimen/margin_20dp"
                            android:layout_toRightOf="@id/r1"
                            android:backgroundTint="@color/color_gray"
                            app:cardCornerRadius="@dimen/radius_cardview">

                        </androidx.cardview.widget.CardView>

                    </RelativeLayout>
                </HorizontalScrollView>

                <RelativeLayout
                    android:id="@+id/rl_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_20dp"
                    android:backgroundTint="@color/color_gray"
                    app:layout_constraintTop_toBottomOf="@id/hs_cardview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <LinearLayout
                        android:id="@+id/lin1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/tv_titre"
                            style="@style/FieldRounded"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="14dp"
                            android:gravity="start"
                            android:hint="@string/hint_titre"
                            android:inputType="textWebEditText" />

                        <EditText
                            android:id="@+id/tv_description"
                            style="@style/FieldRounded"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:gravity="start"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="14dp"
                            android:hint="@string/description"
                            android:inputType="textWebEditText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@id/lin2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_40dp"
                        android:layout_marginEnd="@dimen/margin_40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/lin1">

                        <RadioButton
                            android:id="@+id/rb_homme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/ic_baseline_radio_button_checked_24"
                            android:checked="true"
                            android:selectAllOnFocus="false"
                            android:text="Homme"
                            android:fontFamily="@font/roboto_bold"
                            android:textColor="@color/color_standard"
                            android:textColorHint="@color/color_standard"
                            android:textSize="@dimen/margin_12dp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/rb_femme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/ic_baseline_radio_button_unchecked_24"
                            android:text="Femme"
                            android:fontFamily="@font/roboto_bold"
                            android:textColor="@color/color_standard"
                            android:textSize="@dimen/margin_12dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lin3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_10dp"
                        android:orientation="horizontal"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/lin2"
                        >

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/item_category"
                            recycler_list_category="@{viewModel}"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lin4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lin3"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="@dimen/layout_margin_10dp"
                        android:orientation="horizontal">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/item_sub_category"
                            recycler_list_subCategory="@{viewModel}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="2"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lin5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/lin4"
                        android:layout_marginTop="@dimen/layout_margin_10dp">


                        <EditText
                            android:id="@+id/edtTaille"
                            style="@style/FieldRounded"
                            android:inputType="textCapWords"
                            android:layout_width="0dp"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="14dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/hint_taille"
                            />
                        <EditText
                            android:id="@+id/edtMarque"
                            style="@style/FieldRounded"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="14dp"
                            android:layout_marginStart="@dimen/spacing_control"
                            android:hint="@string/hint_marque"
                            android:inputType="textCapWords"
                            />

                        <Spinner
                            android:id="@+id/edtCouleur"
                            style="@style/FieldRounded"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/spacing_control"
                            android:fontFamily="@font/roboto_bold"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:theme="@style/Spinner"
                            android:background="@drawable/custom_spn_color"
                            android:entries="@array/couleur" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lin6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/lin5">

                        <Spinner
                            android:id="@+id/spnEtat"
                            style="@style/spinnerRounded"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:theme="@style/Spinner"
                            android:background="@drawable/custom_spn_background"
                            android:entries="@array/etat"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lin7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_10dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/lin6">
                        <EditText
                            android:id="@+id/edtPrixVente"
                            style="@style/FieldRounded"
                            android:inputType="textCapWords"
                            android:layout_marginEnd="@dimen/spacing_control"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="14dp"
                            android:hint="@string/hint_prix_vente"
                            android:gravity="start"
                            android:nextFocusDown="@+id/edtPrixOrigine"
                            android:singleLine="true" />

                        <EditText
                            android:id="@+id/edtPrixOrigine"
                            style="@style/FieldRounded"
                            android:inputType="textCapWords"
                            android:gravity="start"
                            android:layout_weight="1"
                            android:hint="@string/hint_prix_origine"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lin8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_10dp"
                        android:layout_marginBottom="@dimen/layout_margin_10dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/lin7">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnVends"
                            style="@style/MaterialButtonStyle.Filled"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_control"
                            android:fontFamily="@font/roboto_bold"
                            android:layout_marginEnd="@dimen/spacing_control"
                            android:layout_marginBottom="@dimen/spacing_standard"
                            android:text="@string/lbl_jeVends"
                            android:textSize="@dimen/font_size_medium" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
</layout>